--- a/prototypes.html
+++ b/prototypes.html
@@ -20,10 +20,8 @@ footer: false
 
       <h2>Sprint 25</h2>
       <ul>
-        <li><a href="sprint/25/bulletin">Bulletin (iteration 3)</a></li>
-        <li><a href="sprint/25/crime-overview">Bulletin: Crime overview (iteration 4)</a></li>
-        <li><a href="sprint/25/homicide">Bulletin: Homicide (iteration 4)</a></li>
-        <li><a href="sprint/25/offences-involving-weapons">Bulletin: Offences involving weapons (iteration 4)</a></li>
+        <li><a href="sprint/25/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/25/weapons-crime">Weapons crime</a></li>
       </ul>
 
     </div>
