--- a/content-design/Crime/index.html
+++ b/content-design/Crime/index.html
@@ -409,7 +409,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
               <p><a class href="#">An overview of and comparison between Annual Survey of Hours and Earnings (ASHE) and Average Weekly Earnings (AWE): 2017</a><br>
                 Released: 14 September 2017<br>
-                An overview of the Annual Survey of Hours and Earnings and Average Weekly Earnings, comparing the differences between the two headline outputs.</p>
+                An overview of the Annual Survey of Hours and Earnings and Average Weekly Earnings, comparing the differences between the headline outputs.</p>
 
             </div>
 
