--- a/prototypes.html
+++ b/prototypes.html
@@ -13,6 +13,12 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
+      <h2 class="margin-bottom--0">July 2019</h2>
+
+      <ul>
+        <li><a href="content-design/Crime">Crime bulletin, with simplified content</a></li>
+      </ul>
+
       <h2 class="margin-bottom--0">Sprint 11 - latest</h2>
       <p>January 2018</p>
 
