--- a/prototypes.html
+++ b/prototypes.html
@@ -13,6 +13,14 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
+      <h2 class="margin-bottom--0">August 2019</h2>
+
+      <ul>
+        <li><a href="content-design/user-testing-august-2019/1-labels-in-TOC">Crime bulletin, with label-style headings in analysis</a></li>
+        <li><a href="content-design/user-testing-august-2019/2-analysis-in-TOC-label-subheads/index.html">Crime bulletin, with one heading for analysis, and label subheadings for each topic</a></li>
+          <li><a href="content-design/user-testing-august-2019/3-analysis-in-TOC-descriptive-subheads/index.html">Crime bulletin, with one heading for analysis, and descriptive subheadings for each topic</a></li>
+      </ul>
+
       <h2 class="margin-bottom--0">July 2019</h2>
 
       <ul>
