Full TOC in page 1

--- a/content-design/user-testing-august-2019/1-labels-in-TOC/index.html
+++ b/content-design/user-testing-august-2019/1-labels-in-TOC/index.html
@@ -147,7 +147,31 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#main-points">Main points</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#analysis">Analysis of crime trends</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#overall">Overall estimates of crime</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#violent-crime">Violent crime</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#homicide">Homicide</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#knives-and-sharp-instruments">Knives and sharp instruments</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#theft">Theft</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#burglary-robbery-and-vehicle-theft">Burglary, robbery and vehicle theft</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#criminal-damage">Criminal Damage</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#fraud">Fraud</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#computer-misuse">Computer misuse</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#data">Crime data</a>
@@ -225,9 +249,8 @@ summary: "Crime against households and adults, also including data on crime expe
 
 
           <!-- Section 3 - analysis of earnings-->
-          <div id="analysis" class="content-margin">
-            <h2>2. Analysis of crime trends</h2>
-            <h3>Overall estimates of crime</h3>
+          <div id="overall">
+            <h2>2.Overall estimates of crime</h2>
 
             <!-- Chart -->
             <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
@@ -282,7 +305,11 @@ summary: "Crime against households and adults, also including data on crime expe
             </div>
           </div>
 
-          <h3>Violent crime</h3>
+          <p><a class href="#toc">Back to table of contents</a></p>
+
+
+          <div id="violent-crime">
+            <h2>3. Violent crime</h2>
 
           <!-- Chart -->
           <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="3241440" data-gtm-vis-total-visible-time-6431828_3669="1500">
@@ -298,7 +325,11 @@ summary: "Crime against households and adults, also including data on crime expe
 
               <p>The CSEW shows that the level of lower-harm violent offences has not changed. The CSEW provides the best measure of overall trends in violent crime, giving a good measure of the more common but less harmful offences. The latest estimate indicates a continuation of the relatively stable levels of violent crime seen over the last four years.</p>
 
-              <h3>Homicide</h3>
+              <p><a class href="#toc">Back to table of contents</a></p>
+
+
+              <div id="homicide">
+                <h2>4. Homicide</h2>
 
               <!-- Chart -->
                 <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="22890" data-gtm-vis-total-visible-time-6431828_3669="3800">
@@ -316,7 +347,11 @@ summary: "Crime against households and adults, also including data on crime expe
 
                   <p>An upward trend in homicides seen over the last four years contrasts with the downward trend over the previous decade. Despite this, the rate of homicide in the population remains very low, at 12 homicides per 1 million people. Trends in homicide can be affected by events with multiple homicide victims, for example, the terrorist attacks in London and Manchester in 2017.</p>
 
-                  <h3>Knives and sharp instruments</h3>
+                  <p><a class href="#toc">Back to table of contents</a></p>
+
+
+                  <div id="knives-and-sharp-instruments">
+                    <h2>5. Knives and sharp instruments</h2>
 
                       <!-- Chart -->
                       <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
@@ -344,8 +379,11 @@ summary: "Crime against households and adults, also including data on crime expe
                         </strong>
                       </div>
 
-                  <h3>Theft</h3>
+                      <p><a class href="#toc">Back to table of contents</a></p>
 
+
+                <div id="theft">
+                  <h2>6. Theft</h2>
                           <!-- Chart -->
                             <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
                             <h4 class="flush--third--vertical">Figure 11: The Crime Survey for England and Wales indicates emerging rise in overall theft offences following long-term declines</h4>
@@ -361,10 +399,12 @@ summary: "Crime against households and adults, also including data on crime expe
 
                           <p>The latest rise in theft was mainly driven by a 23% increase in "theft from outside a dwelling". The CSEW is our most reliable indicator for long-term trends, particularly for the more common types of crime experienced by the general population. It  captures more minor thefts which are less likely to be reported to the police. The latest rise was mainly driven by a 23% increase in "theft from outside a dwelling".</p>
 
-                    <h3>Burglary, robbery and vehicle theft</h3>
+                          <p><a class href="#toc">Back to table of contents</a></p>
 
+
+                  <div id="burglary-robbery-and-vehicle-theft">
+                    <h2>7. Burglary, robbery and vehicle theft</h2>
                           <!-- Chart -->
-
                           <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-recent-on-screen-6431828_3669="1808155" data-gtm-vis-first-on-screen-6431828_3669="1808155" data-gtm-vis-total-visible-time-6431828_3669="5000" data-gtm-vis-has-fired-6431828_3669="1">
                             <h4 class="flush--third--vertical">Figure 12: Fall in police recorded burglary but rises in police recorded robbery and vehicle offences</h4>
                             <h5 class="flush--third--bottom">England and Wales, year ending March 2003 to year ending March 2019</h5>
@@ -383,12 +423,19 @@ summary: "Crime against households and adults, also including data on crime expe
 
                           <p>Rises seen over the last three years across the range of vehicle offences, including theft of and theft from vehicle, have continued. Police recorded crime data can help identify short-term changes in some types of theft offences, including vehicle offences which are thought to be generally well-reported by victims and well-recorded by the police.</p>
 
-                    <h3>Criminal Damage</h3>
+                          <p><a class href="#toc">Back to table of contents</a></p>
+
+
+                    <div id="criminal-damage">
+                      <h2>8. Criminal Damage</h2>
 
                           <p>Estimates of overall criminal data experienced by the general population showed no change following long term declines. However, within the category of Criminal Damage there was a 14% increase in criminal damage to a vehicle estimated by the CSEW (to 811,000 offences). There was a 21% decrease in arson and other criminal damage offences estimated by the CSEW (to 324,000 offences).</p>
 
-                  <h3>Fraud</h3>
+                          <p><a class href="#toc">Back to table of contents</a></p>
 
+
+                <div id="fraud">
+                  <h2>9. Fraud</h2>
                         <!-- Chart -->
                         <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="2153900" data-gtm-vis-total-visible-time-6431828_3669="1200">
                         <h4 class="flush--third--vertical">Figure 13: CAMIS data show an increase in plastic card fraud reported to UK Finance in recent years</h4>
@@ -413,7 +460,11 @@ summary: "Crime against households and adults, also including data on crime expe
                         </strong>
                       </div>
 
-                  <h3>Computer misuse</h3>
+                      <p><a class href="#toc">Back to table of contents</a></p>
+
+
+              <div id="criminal-damage">
+                <h2>10. Computer misuse</h2>
 
                         <p>The fall in estimates of computer misuse offences was mainly driven by declines in the numbers of computer virus incidents. The CSEW is the best source for measuring the volume of computer misuse offences experiened by the general population as it captures offences that go unreported</p>
 
@@ -425,10 +476,11 @@ summary: "Crime against households and adults, also including data on crime expe
                           The CSEW was recently extended to cover computer misuse. Comparisons over time are based on limited data points, therefore caution must be taken in interpreting early trends.
                         </strong>
                       </div>
+                      <p><a class href="#toc">Back to table of contents</a></p>
 
 
           <!-- Section 4 -  data -->
-          <div id="data" class="content-margin">
+          <div id="data">
             <h2>3. Crime data</h2>
             <p><a>Crime in England and Wales: Bulletin Tables</a><br>
               Dataset | Released on 19 October 2017<br>
@@ -442,7 +494,7 @@ summary: "Crime against households and adults, also including data on crime expe
           </div>
 
           <!-- Section 5 - glossary -->
-          <div id="glossary" class="content-margin">
+          <div id="glossary">
             <h2>4. Glossary</h2>
             <h3>Violent crime</h3>
             <p>Covers a range of offence types from minor assaults, such as pushing and shoving that result in no physical harm, to murder. This includes offences where the victim was intentionally stabbed, punched, kicked, pushed or jostled, as well as offences where the victim was threatened with violence whether or not there is any injury.</p>
@@ -464,7 +516,7 @@ summary: "Crime against households and adults, also including data on crime expe
           </div>
 
           <!-- Section 6 - measuring the data-->
-          <div id="measuring-this-data" class="content-margin">
+          <div id="measuring-this-data">
             <h2>5. Measuring this data</h2>
             <p>This page is part of our quarterly crime collection, which relies on two main sources of data.</p>
 
@@ -484,7 +536,7 @@ summary: "Crime against households and adults, also including data on crime expe
           </div>
 
           <!-- Section 5 - strengths and limitations-->
-          <div id="strengths-and-limitations" class="content-margin">
+          <div id="strengths-and-limitations">
             <h2>6. Strengths and limitations</h2>
               <p>The Crime Survey of England and Wales (CSEW) has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
               <p>The CSEW does not cover crimes against businesses or those not resident in households and is not well-suited to measuring trends in some of the more harmful crimes that occur in relatively low volumes.<p/>
@@ -502,7 +554,7 @@ summary: "Crime against households and adults, also including data on crime expe
           </div>
 
           <!-- Section 6 - related links-->
-          <div id="related-links" class="content-marging">
+          <div id="related-links">
             <h2>6. Related links</h2>
             <div class="content-box">
               <p><a class href="#">Earnings and working hours</a><br>
