Added descriptive subheads to page 3

--- a/content-design/user-testing-august-2019/3-analysis-in-TOC-descriptive-subheads/index.html
+++ b/content-design/user-testing-august-2019/3-analysis-in-TOC-descriptive-subheads/index.html
@@ -227,7 +227,7 @@ summary: "Crime against households and adults, also including data on crime expe
           <!-- Section 3 - analysis of earnings-->
           <div id="analysis" class="content-margin">
             <h2>2. Analysis of crime trends</h2>
-            <h3>Overall estimates of crime</h3>
+            <h3>Overall levels of crime have not changed</h3>
 
             <!-- Chart -->
             <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
@@ -282,7 +282,7 @@ summary: "Crime against households and adults, also including data on crime expe
             </div>
           </div>
 
-          <h3>Violent crime</h3>
+          <h3>No change in the most common types of violent crime</h3>
 
           <!-- Chart -->
           <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="3241440" data-gtm-vis-total-visible-time-6431828_3669="1500">
@@ -298,7 +298,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
               <p>The CSEW shows that the level of lower-harm violent offences has not changed. The CSEW provides the best measure of overall trends in violent crime, giving a good measure of the more common but less harmful offences. The latest estimate indicates a continuation of the relatively stable levels of violent crime seen over the last four years.</p>
 
-              <h3>Homicide</h3>
+              <h3>Homicides have increased, but this remains a low-volume crime</h3>
 
               <!-- Chart -->
                 <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="22890" data-gtm-vis-total-visible-time-6431828_3669="3800">
@@ -316,7 +316,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
                   <p>An upward trend in homicides seen over the last four years contrasts with the downward trend over the previous decade. Despite this, the rate of homicide in the population remains very low, at 12 homicides per 1 million people. Trends in homicide can be affected by events with multiple homicide victims, for example, the terrorist attacks in London and Manchester in 2017.</p>
 
-                  <h3>Knives and sharp instruments</h3>
+                  <h3>Offences involving knives or sharp instruments are still rising</h3>
 
                       <!-- Chart -->
                       <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
@@ -344,7 +344,7 @@ summary: "Crime against households and adults, also including data on crime expe
                         </strong>
                       </div>
 
-                  <h3>Theft</h3>
+                  <h3>Recent increase in CSEW theft offences follows a long-term downward trend</h3>
 
                           <!-- Chart -->
                             <div class="markdown-chart-container panel--bottom-mar print--avoid-break">
@@ -359,9 +359,9 @@ summary: "Crime against households and adults, also including data on crime expe
                             <a class="btn btn--primary print--hide" title="Download as xls" href="/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingmarch2019/aa84dec1&amp;format=xls" data-gtm-title="Figure 11:  The Crime Survey for England and Wales indicates emerging rise in overall theft offences following long-term declines" data-gtm-type="download-chart-xls">.xls</a>
                             </div>
 
-                          <p>The latest rise in theft was mainly driven by a 23% increase in "theft from outside a dwelling". The CSEW is our most reliable indicator for long-term trends, particularly for the more common types of crime experienced by the general population. It  captures more minor thefts which are less likely to be reported to the police. The latest rise was mainly driven by a 23% increase in "theft from outside a dwelling".</p>
+                          <p>The latest rise in theft was mainly driven by a 23% increase in "theft from outside a dwelling". The CSEW is our most reliable indicator for long-term trends, particularly for the more common types of crime experienced by the general population. It  captures more minor thefts which are less likely to be reported to the police.</p>
 
-                    <h3>Burglary, robbery and vehicle theft</h3>
+                    <h3>Police recorded a fall in burglaries, whilst vehicle theft and robbery increased</h3>
 
                           <!-- Chart -->
 
@@ -383,11 +383,11 @@ summary: "Crime against households and adults, also including data on crime expe
 
                           <p>Rises seen over the last three years across the range of vehicle offences, including theft of and theft from vehicle, have continued. Police recorded crime data can help identify short-term changes in some types of theft offences, including vehicle offences which are thought to be generally well-reported by victims and well-recorded by the police.</p>
 
-                    <h3>Criminal Damage</h3>
+                  <h3>A mixed picture for criminal damage</h3>
 
-                          <p>Estimates of overall criminal data experienced by the general population showed no change following long term declines. However, within the category of Criminal Damage there was a 14% increase in criminal damage to a vehicle estimated by the CSEW (to 811,000 offences). There was a 21% decrease in arson and other criminal damage offences estimated by the CSEW (to 324,000 offences).</p>
+                        <p>Estimates of overall criminal data experienced by the general population showed no change following long term declines. However, within the category of Criminal Damage there was a 14% increase in criminal damage to a vehicle estimated by the CSEW (to 811,000 offences). There was a 21% decrease in arson and other criminal damage offences estimated by the CSEW (to 324,000 offences).</p>
 
-                  <h3>Fraud</h3>
+                  <h3>Increase in the volume of fraud offences in the last year</h3>
 
                         <!-- Chart -->
                         <div class="markdown-chart-container panel--bottom-mar print--avoid-break" data-gtm-vis-first-on-screen-6431828_3669="2153900" data-gtm-vis-total-visible-time-6431828_3669="1200">
@@ -413,7 +413,7 @@ summary: "Crime against households and adults, also including data on crime expe
                         </strong>
                       </div>
 
-                  <h3>Computer misuse</h3>
+                  <h3>Decrease in computer viruses continues to drive the fall in computer misuse offences</h3>
 
                         <p>The fall in estimates of computer misuse offences was mainly driven by declines in the numbers of computer virus incidents. The CSEW is the best source for measuring the volume of computer misuse offences experiened by the general population as it captures offences that go unreported</p>
 
