--- a/content-design/Crime/sdgs/index.html
+++ b/content-design/Crime/sdgs/index.html
@@ -479,7 +479,7 @@ summary: "Crime against households and adults, also including data on crime expe
               <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
               <p>More information on the methodology can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/crimeinenglandandwalesqmi">Crime in England and Wales Quality and Methodology Information report</a>.</p>
 
-              <p>Our crime statistics are used to monitor progress towards <a href="https://sustainabledevelopment-uk.github.io/16/" Sustainable Development Goal 16</a>: Promote peaceful and inclusive societies for sustainable development, provide access to justice for all and build effective, accountable and inclusive institutions at all levels.</p>
+              <p>Our crime statistics are used to monitor progress towards <a href="https://sustainabledevelopment-uk.github.io/16/">Sustainable Development Goal 16</a>: Promote peaceful and inclusive societies for sustainable development, provide access to justice for all and build effective, accountable and inclusive institutions at all levels.</p>
 
             <p><a class href="#toc">Back to table of contents</a></p>
 
