--- a/content-design/user-testing-august-2019/3-analysis-in-TOC-descriptive-subheads/index.html
+++ b/content-design/user-testing-august-2019/3-analysis-in-TOC-descriptive-subheads/index.html
@@ -377,7 +377,7 @@ summary: "Crime against households and adults, also including data on crime expe
                             <a class="btn btn--primary print--hide" title="Download as xls" href="/generator?uri=/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingmarch2019/70f7ea64&amp;format=xls" data-gtm-title="Figure 12: Fall in police recorded burglary but rises in police recorded robbery and vehicle offences" data-gtm-type="download-chart-xls">.xls</a>
                             </div>
 
-                          <p>The latest trends in burglary showed a fall, following small increases seen over the last two years. Police recorded crime data can help identify short-term changes in some types of theft offences, including burglary which is thought to be generally well-reported by victims and well-recorded by the police. The latest trends in burglary showed a fall, following small increases seen over the last two years.</p>
+                          <p>The latest trends in burglary showed a fall of 3%, following small increases seen over the last two years. Police recorded crime data can help identify short-term changes in some types of theft offences, including burglary which is thought to be generally well-reported by victims and well-recorded by the police. The latest trends in burglary showed a fall, following small increases seen over the last two years.</p>
 
                           <p>The number of robbery offences recorded by the police indicate that the occurance type of theft (invloving the use or threat of violence) continued to rise. Recording improvements are also likely to have contributed, but the impact is thought to be less pronounced than for some other crime types.</p>
 
