--- a/prototypes.html
+++ b/prototypes.html
@@ -12,6 +12,11 @@ footer: false
   <div class="col-wrap">
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
+        <h2 class="margin-bottom--0">September 2019</h2>
+
+        <ul>
+          <li><a href="content-design/Crime/single/">Updated crime bulletin, with label-style headings in analysis</a></li>
+        </ul>
 
       <h2 class="margin-bottom--0">August 2019</h2>
 
