Added all modular pages

--- a/content-design/Crime/modular/fraud-and-computer-misuse/index.html
+++ b/content-design/Crime/modular/fraud-and-computer-misuse/index.html
@@ -7,7 +7,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: true
 footer: true
-title: "Overview of crime in England and Wales: year ending March 2019"
+title: "Fraud and computer misuse in England and Wales: year ending March 2019"
 summary: "Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society."
 ---
 
@@ -80,7 +80,7 @@ summary: "Crime against households and adults, also including data on crime expe
                   <a class="breadcrumb__link astral-link" href="#">Crime and justice</a>
                 </li>
                 <li class="breadcrumb__item__white">
-                  Overview of crime in England and Wales
+                  Fraud and computer misuse in England and Wales
                 </li>
               </ol>
             </div>
@@ -95,7 +95,7 @@ summary: "Crime against households and adults, also including data on crime expe
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col col--md-one col--lg-one">
-          <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">Overview of crime in England and Wales: year ending March 2019
+          <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">Fraud and computer misuse in England and Wales: year ending March 2019
           </h1>
           <p class="summary font-color--white margin-top-sm--2 margin-top-md--2 margin-bottom-sm--3 margin-bottom-md--3 font-medium">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.
           </p>
@@ -186,17 +186,29 @@ summary: "Crime against households and adults, also including data on crime expe
           </div>
         </div>
 
-        <!-- Other bulletins in this release -->
-        <div id="other" class="content-margin">
-          <h2>1. Other bulletins in this release</h2>
+        <!-- Main content -->
+        <article class="col col--md-36 col--lg-39">
+
+
+
+    <!-- Other bulletins in this release -->
+    <div id="other" class="content-margin">
+      <h2>1. Other bulletins in this release</h2>
               <ul>
                 <li>
-                  <p><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/lowandhighpayuk/2018">Low and high pay in the UK: 2018</a></p>
+                  <p><a href="/content-design/Crime/modular/overview/index.html">Overview of crime in England and Wales</a></p>
                 </li>
                 <li>
-                  <p><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/bulletins/genderpaygapintheuk/2018">Gender pay gap in the UK: 2018</a></p>
+                  <p><a href="/content-design/Crime/modular/violent-crime/index.html">Violent crime</a></p>
+                </li>
+                <li>
+                  <p><a href="/content-design/Crime/modular/property-crime/index.html">Property crime</a></p>
+                </li>
+                <li>
+                  <p><a href="/content-design/Crime/modular/police-recorded-crime/index.html">Police recorded crime</a></p>
                 </li>
               </ul>
+
               <a class="print--hide js-scroll" href="#toc">Back to table of contents</a>
 
       <!-- Section 2 - main points-->
@@ -213,6 +225,8 @@ summary: "Crime against households and adults, also including data on crime expe
               <h3>Statistician's comment</h3>
                 <p>Commenting on today’s figures, Mark Bangs from the Office for National Statistics Centre for Crime and Justice said:</p>
                 <p>“The picture of crime is a complex one. Overall levels of crime have remained steady, but this is not the case for all types of crime. For example, overall levels of violence have remained steady but we have seen increases in violent crimes involving knives and sharp instruments. We have seen increases in fraud and overall theft, but decreases in burglary following recent rises.”</p>
+
+                <a class="print--hide js-scroll" href="#toc">Back to table of contents</a>
 
 
           <!-- Section 3 - analysis of earnings-->
