--- a/prototypes.html
+++ b/prototypes.html
@@ -13,10 +13,16 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
         <h2 class="margin-bottom--0">September 2019</h2>
-
+        <p>We're testing whether users prefer one crime bulletin, containing all analysis of crime trends, or a modular bulletin, which breaks the analysis down by topic. These bulletins use the data from the March 2019 release.</p>
         <ul>
-          <li><a href="content-design/Crime/single/">Updated crime bulletin, with label-style headings in analysis</a></li>
+          <li><a href="content-design/Crime/single/">One crime bulletin</a></li>
         </ul>
+        <h4>Modular crime bulletin</h4>
+        <ul>
+            <li><a href="content-design/Crime/modular/overall/">Overview of crime</a></li>
+            <li><a href="content-design/Crime/modular/overall/">Overview of crime</a></li>
+        </ul>
+
 
       <h2 class="margin-bottom--0">August 2019</h2>
 
