--- a/content-design/Crime/modular/fraud-and-computer-misuse/index.html
+++ b/content-design/Crime/modular/fraud-and-computer-misuse/index.html
@@ -150,7 +150,10 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#main-points">Main points</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#analysis">Analysis of crime trends</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#fraud">Fraud</a>
+              </li>
+              <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#computer-misuse">Computer misuse</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#data">Crime data</a>
