--- a/content-design/Crime/single/index.html
+++ b/content-design/Crime/single/index.html
@@ -153,10 +153,10 @@ summary: "Crime against households and adults, also including data on crime expe
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#violent-crime">Violent crime</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#knives-and-sharp-instruments">Knife and sharp instrument crime</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#knife-and-sharp-instrument-offences">Knife and sharp instrument offences</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
-                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#Offences-involving-firearms">Offences involving firearms</a>
+                <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#offences-involving-firearms">Offences involving firearms</a>
               </li>
               <li style="margin: 0 0 0 32px; font-size: 14px; line-height: 24px">
                 <a style="text-decoration: none; font-size: 14px; line-height: 24px" href="#homicide">Homicide</a>
@@ -250,6 +250,7 @@ summary: "Crime against households and adults, also including data on crime expe
                 <p>Commenting on today’s figures, Mark Bangs from the Office for National Statistics Centre for Crime and Justice said:</p>
                 <p>“The picture of crime is a complex one. Overall levels of crime have remained steady, but this is not the case for all types of crime. For example, overall levels of violence have remained steady but we have seen increases in violent crimes involving knives and sharp instruments. We have seen increases in fraud and overall theft, but decreases in burglary following recent rises.”</p>
 
+          <p><a class href="#toc">Back to table of contents</a></p>
 
           <!-- Section 3 - analysis of earnings-->
           <div id="overall">
@@ -498,7 +499,7 @@ summary: "Crime against households and adults, also including data on crime expe
           <p><a class href="#toc">Back to table of contents</a></p>
 
 
-  <div id="Burglary-vehicle-theft-and-robbery">
+  <div id="burglary-vehicle-theft-and-robbery">
     <h2>8. Burglary, vehicle theft and robbery</h2>
 
                       <!-- Chart -->
@@ -581,8 +582,8 @@ summary: "Crime against households and adults, also including data on crime expe
             <p><a class href="#toc">Back to table of contents</a></p>
 
 
-    <div id="fraud">
-      <h2>10. Fraud</h2>
+    <div id="computer-misuse">
+      <h2>11. Computer misuse</h2>
 
             <p>The CSEW provides the better indication of the volume of computer misuse offences as it is able to capture some of the many incidents which go unreported. This can be seen by the large difference in volume of computer misuse offences reported by the CSEW (966,000 offences) and those referred to the NFIB by Action Fraud (21,321 offences). In addition, the two sources have different coverage which means it is not possible to make meaningful comparisons between them.</p>
 
@@ -597,7 +598,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
   <!-- Section 4 -  data -->
   <div id="data">
-    <h2>11. Crime data</h2>
+    <h2>12. Crime data</h2>
             <p><a><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/crimeinenglandandwalesappendixtables">Crime in England and Wales: Appendix Tables</a></a><br>
             Dataset | Released on 18 July 2019<br>
             Trends in Crime Survey for England and Wales (CSEW) crime experienced by adults and children aged 10 to 15 years and Home Office police recorded crime, by offence type. Also includes trends in offender relationship of CSEW violence.</p>
@@ -618,7 +619,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
   <!-- Section 5 - glossary -->
   <div id="glossary">
-    <h2>12. Glossary</h2>
+    <h2>13. Glossary</h2>
 
             <h3>Fraud</h3>
             <p>Fraud involves a person dishonestly and deliberately deceiving a victim for personal gain of property or money, or causing loss or risk of loss to another. The majority of incidents fall under the legal definition of “Fraud by false representation” – where a person makes a representation that they know to be untrue or misleading (e.g. banking and payment card frauds and dating scams).</p>
@@ -645,7 +646,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
     <!-- Section 6 - measuring the data-->
     <div id="measuring-this-data">
-      <h2>13. Measuring this data</h2>
+      <h2>14. Measuring this data</h2>
             <p>This page is part of our quarterly crime collection, which relies on two main sources of data.</p>
 
             <p><strong>Crime Survey of England and Wales</strong></br>
@@ -663,7 +664,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
     <!-- Section 5 - strengths and limitations-->
     <div id="strengths-and-limitations">
-      <h2>14. Strengths and limitations</h2>
+      <h2>15. Strengths and limitations</h2>
 
             <h3>Crime Survey for England and Wales (CSEW)</h3>
             <p>The CSEW is a large nationally representative sample survey that has used a consistent methodology over time. The survey covers crimes not reported to the police and is not affected by changes in police recording practice; therefore, it is a reliable measure of long-term trends. </p>
@@ -680,7 +681,7 @@ summary: "Crime against households and adults, also including data on crime expe
 
     <!-- Section 6 - related links-->
     <div id="related-links">
-      <h2>15. Related links</h2>
+      <h2>16. Related links</h2>
             <div class="content-box">
 
               <p><a class href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/homicideinenglandandwales/yearendingmarch2018">Homicide in England and Wales: year ending March 2018</a><br>
